kafka-template-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-template-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-template-app
  template:
    metadata:
      labels:
        app: kafka-template-app
    spec:
      containers:
        - name: kafka-template-app
          image: kafka-template:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
