kafka-template-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-template-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kafka-template-app
